2008-06-04  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs
	(BuildRefactoryMenuForItem): Add a "Encapsulate fields" command to the Class
	menu.
	(EncapsulateField): Handle invokation from class menu also.
	* MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs: Show a list of
	all fields and allow generating properties for multiple fields.
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs: Update.
	* gtk-gui/gui.stetic: Update.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs,
	  MonoDevelop.Ide.Gui.Dialogs/FileSelectorDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs: Use the OnDestroyed event
	  instead of Dispose, since with the latest changes in gtk#, Dispose
	  is not called anymore when a widget is destroyed.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Make sure the pad
	  can't be reused once the monitor operation has started.
	* MonoDevelop.Ide.Debugging/DebugExecutionHandlerFactory.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/SolutionNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SolutionNodeBuilder.cs,
	  MonoDevelop.Ide.Gui/RootWorkspace.cs: Track api changes.
	  StartupItem is now handled by solutions.
	* MonoDevelop.Ide.addin.xml: Register debug execution mode.

2008-06-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Fix current frame
	  selection.

2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Fixes in backtrace
	  handling.

2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: When the
	  Modified event of a project is fired, update the whole tree only if