@@ -1,3 +1,8 @@
+2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Ide.Commands/FileCommands.cs: Use destroy to dispose the
+	  dialog.
+
 2008-06-04  Ankit Jain  <jankit@novell.com>
 
 	* MonoDevelop.Ide.Commands/RefactoryCommands.cs
